--- a/src/pages/my/user-center/user-center.component.html
+++ b/src/pages/my/user-center/user-center.component.html
@@ -10,12 +10,12 @@
   <div [ngStyle]="sty.facebookHead">
     <img src="{{headIcon}}" width="140" height="140">
   </div>
-  <app-image [imgData]="ui.headMask"></app-image>
-  <app-image [imgData]="ui.vipIcon" *ngIf="isVip"></app-image>
-  <app-image [imgData]="ui.coinBg"></app-image>
-  <app-image [imgData]="ui.ticketBg"></app-image>
-  <app-image [imgData]="ui.coinIcon"></app-image>
-  <app-image [imgData]="ui.ticketIcon"></app-image>
+  <div [appImage]="ui.headMask"></div>
+  <div [appImage]="ui.vipIcon" *ngIf="isVip"></div>
+  <div [appImage]="ui.coinBg"></div>
+  <div [appImage]="ui.ticketBg"></div>
+  <div [appImage]="ui.coinIcon"></div>
+  <div [appImage]="ui.ticketIcon"></div>
   <app-image-button [imgData]="ui.plusBtn" (itemClick)="gotoBank()"></app-image-button>
   <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
   <app-text-field [positionRect]="scoreRect" [text]="''+scoreNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
