--- a/src/pages/my/contact-us/contact-us.component.html
+++ b/src/pages/my/contact-us/contact-us.component.html
@@ -8,7 +8,7 @@
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <div class="widthApp" [appScrollBar]="pageHeight">
-    <app-image [imgData]="ui.title"></app-image>
+    <div [appImage]="ui.title"></div>
     <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
     <form>
       <div [ngStyle]="sty.leftText">
