--- a/src/pages/my/ledger/ledger-item/ledger-item.component.html
+++ b/src/pages/my/ledger/ledger-item/ledger-item.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2022-01-07 11:31:12
 -->
 <div [style.top]="index * 138 + 5 + 'px'" (click)="onItemClick($event)">
-  <app-image [imgData]="ui.itemBg"></app-image>
+  <div [appImage]="ui.itemBg"></div>
   <div class="timeDiv">{{line1Str}}<br/>{{line2Str}}</div>
   <div class="noteDiv">{{noteStr}}</div>
   <div class="changeDiv"><div class="colorClass" [ngStyle]="sty.colorClass">{{changeStr}}</div></div>
