--- a/src/pages/order-for-goods/order-for-goods.component.html
+++ b/src/pages/order-for-goods/order-for-goods.component.html
@@ -7,7 +7,7 @@
  * @LastEditTime: 2022-01-10 11:16:57
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
-  <app-image [imgData]="ui.title"></app-image>
+  <div [appImage]="ui.title"></div>
   <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
   <div class="orderListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="sty.orderListContainer"></div>
   <div *ngIf="showOnprogress">
@@ -16,9 +16,9 @@
     </div>
     <div *ngIf="!orderProgressList.length">
       <div class="noOrder">No New Order Here</div>
-      <app-image [imgData]="ui.shocked"></app-image>
+      <div [appImage]="ui.shocked"></div>
     </div>
-    <app-image [imgData]="ui.progressIcon"></app-image>
+    <div [appImage]="ui.progressIcon"></div>
     <app-image-button [imgData]="ui.compBtn" (itemClick)="changeList()"></app-image-button>
   </div>
   <div *ngIf="!showOnprogress">
@@ -27,9 +27,9 @@
     </div>
     <div *ngIf="!orderCompleteList.length">
       <div class="noOrder">No New Order Here</div>
-      <app-image [imgData]="ui.shocked"></app-image>
+      <div [appImage]="ui.shocked"></div>
     </div>
     <app-image-button [imgData]="ui.progressBtn" (itemClick)="changeList()"></app-image-button>
-    <app-image [imgData]="ui.compIcon"></app-image>
+    <div [appImage]="ui.compIcon"></div>
   </div>
 </div>
