--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -7,11 +7,11 @@
  * @LastEditTime: 2022-01-07 11:39:29
 -->
 <div [style.top]="index * 208 + 'px'" (click)="onItemClick($event)">
-  <app-image [imgData]="ui.itemBg"></app-image>
+  <div [appImage]="ui.itemBg"></div>
   <div [ngStyle]="sty.productImgage">
     <img [attr.src]="itemData.img" width="170" height="170"/>
   </div>
-  <app-image [imgData]="ui.imageFrame"></app-image>
+  <div [appImage]="ui.imageFrame"></div>
   <app-image-button [imgData]="ui.infoIcon" (itemClick)="showInfo()"></app-image-button>
   <div class="title" [ngStyle]="sty.title">{{itemData.name}}</div>
   <div class="blackText" [ngStyle]="sty.create">{{createTime}}</div>
