--- a/src/popups/exchange/exchange.component.html
+++ b/src/popups/exchange/exchange.component.html
@@ -8,10 +8,10 @@
 -->
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="ui.popupBg"></app-image>
+  <div [appImage]="ui.popupBg"></div>
   <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="ui.okBtn" (itemClick)="exchangeToTicket()"></app-image-button>
   <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
   <div class="popupText" [ngStyle]="sty.popupText">Do you want to exchange your</div>
-  <app-image [imgData]="ui.ticketIcon"></app-image>
+  <div [appImage]="ui.ticketIcon"></div>
 </div>
