--- a/src/popups/generic-po/generic-po.component.html
+++ b/src/popups/generic-po/generic-po.component.html
@@ -8,9 +8,9 @@
 -->
 <div [ngStyle]="sty.popupOffset">
     <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-    <app-image [imgData]="ui.popupBg"></app-image>
-    <app-image [imgData]="ui.prizeBg"></app-image>
-    <app-image [imgData]="ui.coinItem"></app-image>
+    <div [appImage]="ui.popupBg"></div>
+    <div [appImage]="ui.prizeBg"></div>
+    <div [appImage]="ui.coinItem"></div>
     <app-image-button [imgData]="ui.buyBtn" (itemClick)="buyPo()" ></app-image-button>
     <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()" ></app-image-button>
     <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
