--- a/src/popups/result/result-failed/result-failed.component.html
+++ b/src/popups/result/result-failed/result-failed.component.html
@@ -8,11 +8,11 @@
 -->
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="ui.popupBg"></app-image>
+  <div [appImage]="ui.popupBg"></div>
   <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
   <app-image-button [imgData]="ui.okBtn" (itemClick)="retry()"></app-image-button>
   <div class="noneSelect" *ngIf="price>0">
-    <app-image [imgData]="ui.coinIcon"></app-image>
+    <div [appImage]="ui.coinIcon"></div>
     <app-popup-text-field [textData]="priceText" [text]="price+''"></app-popup-text-field>
   </div>
   <app-popup-text-field [textData]="scoreText" [text]="'+'+score"></app-popup-text-field>
