--- a/src/popups/result/result-win/result-win.component.html
+++ b/src/popups/result/result-win/result-win.component.html
@@ -8,13 +8,13 @@
 -->
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="ui.popupBg"></app-image>
+  <div [appImage]="ui.popupBg"></div>
   <app-image-button [imgData]="ui.closeBtn" (itemClick)="gotoPrize()"></app-image-button>
   <app-image-button [imgData]="ui.okBtn" (itemClick)="retry()"></app-image-button>
   <img [src]="productImg" [ngStyle]="sty.productStyle"/>
-  <app-image [imgData]="ui.photoFrame"></app-image>
+  <div [appImage]="ui.photoFrame"></div>
   <div class="noneSelect">
-    <app-image [imgData]="ui.coinIcon"></app-image>
+    <div [appImage]="ui.coinIcon"></div>
     <app-popup-text-field [textData]="priceText" [text]="price+''"></app-popup-text-field>
   </div>
   <app-popup-text-field [textData]="winText" [text]="winString"></app-popup-text-field>
