--- a/src/popups/video-error/video-error.component.html
+++ b/src/popups/video-error/video-error.component.html
@@ -8,7 +8,7 @@
 -->
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="ui.popupBg"></app-image>
+  <div [appImage]="ui.popupBg"></div>
   <div class="confirmText">{{tipString}}</div>
   <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
 </div>
