--- a/src/popups/welcome/welcome.component.html
+++ b/src/popups/welcome/welcome.component.html
@@ -8,9 +8,9 @@
 -->
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
-  <app-image [imgData]="ui.popupBg"></app-image>
-  <app-image [imgData]="ui.title"></app-image>
-  <app-image [imgData]="ui.present"></app-image>
+  <div [appImage]="ui.popupBg"></div>
+  <div [appImage]="ui.title"></div>
+  <div [appImage]="ui.present"></div>
   <app-image-button [imgData]="ui.okBtn" (itemClick)="closePo()"></app-image-button>
   <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
   <app-popup-text-field [textData]="coinStText" [text]="coinStringText"></app-popup-text-field>
