--- a/src/service/ui/bottom-bar/bottom-bar.component.html
+++ b/src/service/ui/bottom-bar/bottom-bar.component.html
@@ -7,13 +7,13 @@
  * @LastEditTime: 2022-01-10 15:54:18
 -->
 <div [ngStyle]="sty.bottomBar">
-  <app-image [imgData]="ui.bottomBg"></app-image>
+  <div [appImage]="ui.bottomBg"></div>
   <app-image-button [imgData]="ui.home" (itemClick)="gotoLobby()" *ngIf="iconBigIndex!=0"></app-image-button>
   <app-image-button [imgData]="ui.shop" (itemClick)="gotoBank()" *ngIf="iconBigIndex!=1"></app-image-button>
   <app-image-button [imgData]="ui.price" (itemClick)="gotoPrize()" *ngIf="iconBigIndex!=2"></app-image-button>
   <app-image-button [imgData]="ui.my" (itemClick)="gotoUserCenter()" *ngIf="iconBigIndex!=3"></app-image-button>
-  <app-image [imgData]="ui.homeIcon" *ngIf="iconBigIndex==0"></app-image>
-  <app-image [imgData]="ui.shopIcon" *ngIf="iconBigIndex==1"></app-image>
-  <app-image [imgData]="ui.priceIcon" *ngIf="iconBigIndex==2"></app-image>
-  <app-image [imgData]="ui.myIcon" *ngIf="iconBigIndex==3"></app-image>
+  <div [appImage]="ui.homeIcon" *ngIf="iconBigIndex==0"></div>
+  <div [appImage]="ui.shopIcon" *ngIf="iconBigIndex==1"></div>
+  <div [appImage]="ui.priceIcon" *ngIf="iconBigIndex==2"></div>
+  <div [appImage]="ui.myIcon" *ngIf="iconBigIndex==3"></div>
 </div>
