--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -7,19 +7,19 @@
  * @LastEditTime: 2022-01-05 17:11:58
 -->
 <div>
-  <app-image [imgData]="ui.topBarBg"></app-image>
+  <div [appImage]="ui.topBarBg"></div>
   <div [ngStyle]="sty.facebookHead">
     <img src="assets/default_head.png" width="80" height="80">
     <img src="{{headIcon}}" width="80" height="80">
   </div>
   <app-image-button [imgData]="ui.headMask"  (itemClick)="gotoUserCenter()"></app-image-button>
-  <app-image [imgData]="ui.vipIcon" *ngIf="isVip"></app-image>
-  <app-image [imgData]="ui.coinsBg1"></app-image>
-  <app-image [imgData]="ui.coinsBg2"></app-image>
+  <div [appImage]="ui.vipIcon" *ngIf="isVip"></div>
+  <div [appImage]="ui.coinsBg1"></div>
+  <div [appImage]="ui.coinsBg2"></div>
   <app-image-button [imgData]="ui.dailyBonus" (itemClick)="getDailyBonus()"></app-image-button>
   <div class="redPot" *ngIf="!dailyBonusCollected" [ngStyle]="sty.redPot">{{todaysCoins}}</div>
-  <app-image [imgData]="ui.coin"></app-image>
-  <app-image [imgData]="ui.ticket"></app-image>
+  <div [appImage]="ui.coin"></div>
+  <div [appImage]="ui.ticket"></div>
   <app-image-button [imgData]="ui.plus"  (itemClick)="gotoBank()"></app-image-button>
   <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
   <app-text-field [positionRect]="scoreRect" [text]="''+scoreNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
