--- a/src/pages/before-lobby/start-up/start-up.component.html
+++ b/src/pages/before-lobby/start-up/start-up.component.html
@@ -10,7 +10,7 @@
     <div #startPageEntity [ngStyle]="sty.startPageEntity">
         <div *ngFor="let item of tipPagesForShow; let i = index" [style.left]="750 * (i-1) + 'px'">
             <div [appImage]="item"></div>
-            <app-image-button [imgData]="getBtnUI(i)"></app-image-button>
+            <div [appImageButton]="getBtnUI(i)"></div>
         </div>
     </div>
     <app-active-index-point [rect]="activeIndexPosition" [items]="tipPages" [activeIndex]="carouselCount"></app-active-index-point>
