--- a/src/pages/my/video-play-back/record-play-back/record-play-back.component.html
+++ b/src/pages/my/video-play-back/record-play-back/record-play-back.component.html
@@ -9,12 +9,12 @@
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <video [src]="recordData?.video_url" class="video widthApp" [style.height]="iframeHeight + 'px'" autoplay></video>
   <div [appImage]="ui.topPannel"></div>
-  <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
+  <div [appImageButton]="ui.backBtn" (itemClick)="gotoBack()"></div>
 </div>
 <div class="bottom_bar widthApp">
   <div [appImage]="ui.bottomPannel"></div>
   <div [ngStyle]="sty.noneSelect"><img src="{{recordData?.img}}" [ngStyle]="sty.productImg"></div>
   <div [appImage]="ui.productFrame"></div>
   <div [appImage]="ui.resultText"></div>
-  <app-image-button [imgData]="ui.shareIcon" (itemClick)="shareVideo()"></app-image-button>
+  <div [appImageButton]="ui.shareIcon" (itemClick)="shareVideo()"></div>
 </div>
