--- a/src/popups/force-update/force-update.component.html
+++ b/src/popups/force-update/force-update.component.html
@@ -10,5 +10,5 @@
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <div [appImage]="ui.popupBg"></div>
   <div [appImage]="ui.title"></div>
-  <app-image-button [imgData]="ui.updateBtn" (itemClick)="update()"></app-image-button>
+  <div [appImageButton]="ui.updateBtn" (itemClick)="update()"></div>
 </div>
