--- a/src/pages/my/ledger/ledger.component.html
+++ b/src/pages/my/ledger/ledger.component.html
@@ -7,17 +7,17 @@
  * @LastEditTime: 2022-01-05 11:57:40
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
-  <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
+  <div [appImageButton]="ui.backBtn" (itemClick)="gotoBack()"></div>
   <div class="ledgerListContainer" [style.height]="pageHeight - 265 + 'px'" [ngStyle]="sty.ledgerList"></div>
   <div *ngIf="showCoinList">
     <div [appImage]="ui.coinIcon"></div>
-    <app-image-button [imgData]="ui.ticketBtn" (itemClick)="switchList(2)"></app-image-button>
+    <div [appImageButton]="ui.ticketBtn" (itemClick)="switchList(2)"></div>
     <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 395 + 'px'">
       <app-ledger-item *ngFor="let item of coinsChangeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ledger-item>
     </div>
   </div>
   <div *ngIf="!showCoinList">
-    <app-image-button [imgData]="ui.coinBtn" (itemClick)="switchList(1)"></app-image-button>
+    <div [appImageButton]="ui.coinBtn" (itemClick)="switchList(1)"></div>
     <div [appImage]="ui.ticketIcon"></div>
     <div [ngStyle]="sty.scrollBar" [appScrollBar]="pageHeight-395">
       <app-ledger-item *ngFor="let item of ticketChangeList; let i = index" [itemData]="item" [textureData]="textureData" [index]="i"></app-ledger-item>
