--- a/src/pages/my/sound-and-logout/sound-and-logout.component.html
+++ b/src/pages/my/sound-and-logout/sound-and-logout.component.html
@@ -8,14 +8,14 @@
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <div [appImage]="ui.title"></div>
-  <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
-  <div [ngStyle]="sty.bottom"><app-image-button [imgData]="ui.logoutBtn" (itemClick)="logout()"></app-image-button></div>
+  <div [appImageButton]="ui.backBtn" (itemClick)="gotoBack()"></div>
+  <div [ngStyle]="sty.bottom"><div [appImageButton]="ui.logoutBtn" (itemClick)="logout()"></div></div>
   <div [appImage]="ui.soundEffectSettingBg"></div>
   <div [appImage]="ui.musicSettingBg"></div>
-  <app-image-button [imgData]="ui.soundEffectOnBtn" (itemClick)="setSoundEffect( true )" *ngIf="soundEffectOn"></app-image-button>
-  <app-image-button [imgData]="ui.soundOnBtn" (itemClick)="setMusic( true )" *ngIf="soundOn"></app-image-button>
-  <app-image-button [imgData]="ui.soundEffectOffBtn" (itemClick)="setSoundEffect( false )" *ngIf="!soundEffectOn"></app-image-button>
-  <app-image-button [imgData]="ui.soundOffBtn" (itemClick)="setMusic( false )" *ngIf="!soundOn"></app-image-button>
+  <div [appImageButton]="ui.soundEffectOnBtn" (itemClick)="setSoundEffect( true )" *ngIf="soundEffectOn"></div>
+  <div [appImageButton]="ui.soundOnBtn" (itemClick)="setMusic( true )" *ngIf="soundOn"></div>
+  <div [appImageButton]="ui.soundEffectOffBtn" (itemClick)="setSoundEffect( false )" *ngIf="!soundEffectOn"></div>
+  <div [appImageButton]="ui.soundOffBtn" (itemClick)="setMusic( false )" *ngIf="!soundOn"></div>
   <app-popup-text-field [textData]="soundEffectText" [text]="soundEffectString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
   <app-popup-text-field [textData]="musicText" [text]="musicString" [shadowObj]="sty.lightTextShadow"></app-popup-text-field>
 </div>
