--- a/src/pages/order-for-goods/order-for-goods.component.html
+++ b/src/pages/order-for-goods/order-for-goods.component.html
@@ -8,7 +8,7 @@
 -->
 <div class="widthApp" [style.height]="pageHeight + 'px'" [ngStyle]="sty.stretchingBg">
   <div [appImage]="ui.title"></div>
-  <app-image-button [imgData]="ui.backBtn" (itemClick)="gotoBack()"></app-image-button>
+  <div [appImageButton]="ui.backBtn" (itemClick)="gotoBack()"></div>
   <div class="orderListContainer" [style.height]="pageHeight - 220 + 'px'" [ngStyle]="sty.orderListContainer"></div>
   <div *ngIf="showOnprogress">
     <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
@@ -19,7 +19,7 @@
       <div [appImage]="ui.shocked"></div>
     </div>
     <div [appImage]="ui.progressIcon"></div>
-    <app-image-button [imgData]="ui.compBtn" (itemClick)="changeList()"></app-image-button>
+    <div [appImageButton]="ui.compBtn" (itemClick)="changeList()"></div>
   </div>
   <div *ngIf="!showOnprogress">
     <div [ngStyle]="sty.scrollBar" [style.height]="pageHeight - 350 + 'px'">
@@ -29,7 +29,7 @@
       <div class="noOrder">No New Order Here</div>
       <div [appImage]="ui.shocked"></div>
     </div>
-    <app-image-button [imgData]="ui.progressBtn" (itemClick)="changeList()"></app-image-button>
+    <div [appImageButton]="ui.progressBtn" (itemClick)="changeList()"></div>
     <div [appImage]="ui.compIcon"></div>
   </div>
 </div>
