--- a/src/pages/prize/prize-item/prize-item.component.html
+++ b/src/pages/prize/prize-item/prize-item.component.html
@@ -12,11 +12,11 @@
     <img [attr.src]="itemData.img" width="170" height="170"/>
   </div>
   <div [appImage]="ui.imageFrame"></div>
-  <app-image-button [imgData]="ui.infoIcon" (itemClick)="showInfo()"></app-image-button>
+  <div [appImageButton]="ui.infoIcon" (itemClick)="showInfo()"></div>
   <div class="title" [ngStyle]="sty.title">{{itemData.name}}</div>
   <div class="blackText" [ngStyle]="sty.create">{{createTime}}</div>
   <div class="blackText" [ngStyle]="sty.expire" *ngIf="!isExpire">{{expireTime}}</div>
   <div class="hasExpired" [ngStyle]="sty.hasExpired" *ngIf="isExpire">expired</div>
-  <app-image-button [imgData]="ui.sellBtn" (itemClick)="sellTicket()"></app-image-button>
-  <app-image-button [imgData]="ui.packBtn" (itemClick)="packageItems()"></app-image-button>
+  <div [appImageButton]="ui.sellBtn" (itemClick)="sellTicket()"></div>
+  <div [appImageButton]="ui.packBtn" (itemClick)="packageItems()"></div>
 </div>
