--- a/src/pages/shop/ticket-item/ticket-item.component.html
+++ b/src/pages/shop/ticket-item/ticket-item.component.html
@@ -9,8 +9,8 @@
 <div [ngStyle]="sty.ticketItem" (click)="onItemClick($event)">
   <img src={{itemData.img}} (load)="onImgload()" [ngStyle]="sty.ticketItemImage"/>
   <div [appImage]="ui.ticketItemBg"></div>
-  <app-image-button [imgData]="ui.infoIcon"></app-image-button>
-  <app-image-button [imgData]="ui.buyBtn"></app-image-button>
+  <div [appImageButton]="ui.infoIcon"></div>
+  <div [appImageButton]="ui.buyBtn"></div>
   <div [appImage]="ui.ticketIcon"></div>
   <app-popup-text-field [textData]="priceText" [text]="'' + itemData.price"></app-popup-text-field>
   <app-list-text-field [text]="itemData.name" [positionRect]="tipRect" [size]="25" [bold]="true"></app-list-text-field>
