--- a/src/popups/Logout/Logout.component.html
+++ b/src/popups/Logout/Logout.component.html
@@ -9,7 +9,7 @@
 <div [ngStyle]="sty.popupOffset">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <div [appImage]="ui.popupBg"></div>
-  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
-  <app-image-button [imgData]="ui.okBtn" (itemClick)="logout()"></app-image-button>
+  <div [appImageButton]="ui.closeBtn" (itemClick)="closePo()"></div>
+  <div [appImageButton]="ui.okBtn" (itemClick)="logout()"></div>
   <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
 </div>
