--- a/src/popups/delete-address/delete-address.component.html
+++ b/src/popups/delete-address/delete-address.component.html
@@ -10,6 +10,6 @@
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <div [appImage]="ui.popupBg"></div>
   <div class="confirmText">Do you want to delete this address?</div>
-  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()"></app-image-button>
-  <app-image-button [imgData]="ui.confirmBtn" (itemClick)="confirmPo()"></app-image-button>
+  <div [appImageButton]="ui.closeBtn" (itemClick)="closePo()"></div>
+  <div [appImageButton]="ui.confirmBtn" (itemClick)="confirmPo()"></div>
 </div>
