--- a/src/popups/generic-popup/generic-popup.component.html
+++ b/src/popups/generic-popup/generic-popup.component.html
@@ -10,6 +10,6 @@
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <div [appImage]="ui.popupBg"></div>
   <div [appImage]="ui.titleBg"></div>
-  <app-image-button [imgData]="ui.confirmBtn" (itemClick)="confirmPo()" ></app-image-button>
-  <app-image-button [imgData]="ui.closeBtn" (itemClick)="closePo()" ></app-image-button>
+  <div [appImageButton]="ui.confirmBtn" (itemClick)="confirmPo()" ></div>
+  <div [appImageButton]="ui.closeBtn" (itemClick)="closePo()" ></div>
 </div>
