--- a/src/popups/purchase-success/purchase-success.component.html
+++ b/src/popups/purchase-success/purchase-success.component.html
@@ -10,5 +10,5 @@
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
   <app-image-rotating [imgData]="ui.light"></app-image-rotating>
   <div [appImage]="ui.popupBg"></div>
-  <app-image-button [imgData]="ui.collectBtn" (itemClick)="collect()"></app-image-button>
+  <div [appImageButton]="ui.collectBtn" (itemClick)="collect()"></div>
 </div>
